Updated the mutations example

--- a/examples/mutations/index.html
+++ b/examples/mutations/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Master/Detail form demo | Wingspan Forms</title>
+    <title>react-cursor - Mutation interface example</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 </head>
 <body>
-  <div id="root"></div>
-  <script src='/static/bundle.js'></script>
+    <h1>Item Editor</h1></p>
+    <p><p>
+        This is an example application that is supposed to showcase the
+        <a href="https://github.com/dustingetz/react-cursor"><strong>react-cursor project</strong></a>'s compliance to
+        the <a href="http://facebook.github.io/react/docs/update.html#available-commands">React Immutable Helper</a>
+        interface.
+    </p>
+    <div id="root"></div>
+    <script src="/static/bundle.js"></script>
 </body>
-
 </html>
