--- a/examples/helloworld/index.html
+++ b/examples/helloworld/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <div id="root"></div>
+  <script type='text/javascript' src='//cdn.jsdelivr.net/react/0.13.3/react-with-addons.js'></script>
+  <script src="./js-atom-0.4.0.js"></script>
+  <script src="./react-cursor.min.js"></script>
   <script src='/static/bundle.js'></script>
 </body>
 
