--- a/examples/helloworld/index.html
+++ b/examples/helloworld/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Master/Detail form demo | Wingspan Forms</title>
+    <title>react-cursor helloworld example</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 </head>
 <body>
   <div id="root"></div>
-  <script type='text/javascript' src='//cdn.jsdelivr.net/react/0.13.3/react-with-addons.js'></script>
-  <script src="./js-atom-0.4.0.js"></script>
-  <script src="./react-cursor.min.js"></script>
   <script src='/static/bundle.js'></script>
 </body>
 
