--- a/examples/mutations/index.html
+++ b/examples/mutations/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>react-cursor - Mutation interface example</title>
+    <title>react-cursor methods example</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 </head>
 <body>
