fix standalone example

--- a/examples/standalone/index.html
+++ b/examples/standalone/index.html
@@ -8,7 +8,7 @@
 <div id="root"></div>
 <script src="http://fb.me/react-with-addons-0.14.2.js"></script>
 <script src="http://fb.me/react-dom-0.14.2.js"></script>
-<script src="../../static/react-cursor.min.js"></script>
+<script src="../../dist/react-cursor.js"></script>
 <script>
     var ChildDescriptor = React.createClass({
         mixins: [ReactCursor.ImmutableOptimizations(['cursor'])],
